# cpp-timer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  timer.cpp  timer.h
tests/: test_timer.cpp
